# mushy-peas

./: .gitignore  README.md  peas.md  pyproject.toml
.githooks/: post-commit
.github/workflows/: ci.yml
docs/: softcode-oracle.md  softcode-parser-plan.md
mushy_peas/: __init__.py  chat_model.py  chat_reader.py  chat_writer.py  cli.py  compression.py  constants.py  errors.py  mail_model.py  mail_reader.py  mail_writer.py  main_model.py  main_reader.py  main_writer.py  oldstyle.py  primitives.py
mushy_peas/softcode/: __init__.py  actions.py  ast_views.py  coverage_report.py  function_metadata.py  graph.py  inventory.py  model.py  parser.py  profiles.py  render.py  seeds.py  units.py
reports/: softcode-inventory.md  softcode-units.md
tests/: __init__.py  strategies.py  test_chat_reader.py  test_chat_writer.py  test_cli.py  test_compression.py  test_mail_reader.py  test_mail_writer.py  test_main_oldstyle.py  test_main_reader.py  test_main_writer.py  test_primitives.py  test_properties.py  test_roundtrip.py
tests/fixtures/: README.md
tests/fixtures/chat/: current_channel.db  oldstyle_channel.db
tests/fixtures/filters/: copy_filter.py  fail_filter.py
tests/fixtures/mail/: current_with_alias_message.db
tests/fixtures/main/: current_objects.db  global_lists.db
tests/fixtures/oldstyle/: new_strings_no_labels.db
tests/fixtures/softcode/: corpus-seeds.json  pennmush-functions.json
tests/oracle/: __init__.py  pennmush_oracle.py  pennmush_softcode_oracle.py  test_pennmush_oracle.py  test_pennmush_softcode_oracle.py
tests/softcode/: __init__.py  strategies.py  test_actions.py  test_ast_views.py  test_coverage_report.py  test_function_metadata.py  test_graph.py  test_inventory.py  test_model.py  test_oracle_agreement.py  test_parser.py  test_profiles.py  test_render.py  test_seeds.py  test_units.py
