[project]
name = "mushy-peas"
version = "0.1.0"
description = "Reader and writer toolkit for PennMUSH database files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mush-inspect = "mushy_peas.cli:mush_inspect"
mush-roundtrip = "mushy_peas.cli:mush_roundtrip"
mush-dump-json = "mushy_peas.cli:mush_dump_json"
mush-upgrade = "mushy_peas.cli:mush_upgrade"
mush-softcode-functions = "mushy_peas.softcode.function_metadata:main"
mush-softcode-coverage = "mushy_peas.cli:mush_softcode_coverage"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pyright>=1.1.390",
    "pytest>=8.2",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["mushy_peas", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
